--- a/index.html
+++ b/index.html
@@ -9,54 +9,25 @@
 
     <!-- COMMON TAGS -->
     <meta charset="utf-8">
-    <title>Coworking Salta</title>
+    <title>Estudio Caro Figueroa Abogados</title>
     <!-- Search Engine -->
-    <meta name="description" content="Ahora tenés en Salta un nuevo lugar de coworking, donde podrás cultivar tu creatividad, compartiendo ideas y conocimientos, o simplemente trabajando en tus proyectos en un entorno cómodo, agradable, espacioso y con horarios flexibles.">
-    <meta name="image" content="www.coworkingsalta.com/img/logo.png">
+
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Coworking Salta">
-    <meta itemprop="description" content="Ahora tenés en Salta un nuevo lugar de coworking, donde podrás cultivar tu creatividad, compartiendo ideas y conocimientos, o simplemente trabajando en tus proyectos en un entorno cómodo, agradable, espacioso y con horarios flexibles.">
-    <meta itemprop="image" content="www.coworkingsalta.com/img/logo.png">
+
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Coworking Salta">
-    <meta name="twitter:description" content="Ahora tenés en Salta un nuevo lugar de coworking, donde podrás cultivar tu creatividad, compartiendo ideas y conocimientos, o simplemente trabajando en tus proyectos en un entorno cómodo, agradable, espacioso y con horarios flexibles.">
-    <meta name="twitter:site" content="@coworking_sla">
-    <meta name="twitter:creator" content="@coworking_sla">
-    <meta name="twitter:image:src" content="www.coworkingsalta.com/img/logo.png">
+
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="Coworking Salta">
-    <meta name="og:description" content="Ahora tenés en Salta un nuevo lugar de coworking, donde podrás cultivar tu creatividad, compartiendo ideas y conocimientos, o simplemente trabajando en tus proyectos en un entorno cómodo, agradable, espacioso y con horarios flexibles.">
-    <meta name="og:image" content="www.coworkingsalta.com/img/logo_menu.png">
-    <meta name="og:url" content="www.coworkingsalta.com">
-    <meta name="og:site_name" content="Coworking Salta">
-    <meta name="fb:admins" content="108625579752882">
-    <meta name="og:type" content="website">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109762199-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-109762199-1');
-    </script>
 
 
     <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="theme-color" content="#ffffff">
+
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,900" rel="stylesheet">
 
     <!--Styles-->
     <link rel="stylesheet" href="css/grid.css">
-
-    <title>Coworking Salta</title>
-   
 </head>
 <body>
  <section class="superior">
@@ -67,16 +38,15 @@
 </section>
 <div class="container">
     <header class="header">
-        <img class="logo" src="img/logo.svg">
+        <img class="logo" src="img/logo_home.jpg">
         <div class="links">
         <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="quienes.html">QUIÉNES SOMOS</a></li>
-        <li><a href="coworking.html">QUÉ ES EL COWORKING</a></li>
-        <li><a href="nuestros-servicios.html">NUESTROS SERVICIOS</a></li>
-        <li><a href="donde.html">DÓNDE ESTAMOS</a></li>
-        <li><a href="clientes.html">ACCESO CLIENTES</a></li>
-        <li><a href="contacto.html">CONTACTO</a>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="quienes.html">Quiénes somos</a></li>
+        <li><a href="coworking.html">Código ético</a></li>
+        <li><a href="nuestros-servicios.html">Areas de actuación</a></li>
+        <li><a href="donde.html">Artículos</a></li>
+        <li><a href="contacto.html">Contacto</a>
         </ul>
     </div>
     </header>
