--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Favicon-->
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700" rel="stylesheet">
 
     <!--Styles-->
     <link rel="stylesheet" href="css/grid.css">
@@ -123,19 +123,24 @@
 </section> <!-- .full-width-slider --></div>
     <nav></nav>
     <main>
-        <h2><b>Ahora tenés en Salta un nuevo lugar de trabajo, donde podrás cultivar tu creatividad,
-compartiendo ideas y conocimientos, o simplemente trabajando en tus proyectos en un
-entorno cómodo, agradable, espacioso y con horarios flexibles.</b> 
- <hr>
- <b>¡Sumate!</b><br> Nuestra propuesta es una alternativa rentable y práctica al tradicional alquiler de
-oficinas. Ahora no necesitás invertir en equipamiento: te brindamos infraestructura y
-servicios adecuados, a un precio razonable. <br>  
- <hr>
-<b>CF COWORKING SLA</b> está pensado para emprendedores, profesionales autónomos, freelancers que desarrollan sus actividades y mantienen reuniones con socios o clientes así como para empresas que necesitan domiciliar su sede social, sus trámites o sus relaciones comerciales incluyendo zonas de capacitación.</h2>
-
-
+        <h2><b>Es un nuevo emprendimiento profesional, hecho por salteños, fruto de la confluencia entre la visión tradicional y los más avanzados aportes que,
+            como sucede con las nuevas tecnologías de la información y la comunicación, están renovando el ejercicio de la abogacía y el tratamiento
+            de los conflictos en las relaciones civiles, comerciales, laborales, ambientales y de familia.
+            Profesionales de diversa trayectoria en el campo de las ciencias sociales nos hemos reunido en CARO FIGUEROA ABOGADOS
+            para brindar a quienes atraviesan situaciones de conflicto y reclaman el reconocimiento de sus derechos, un servicio de alta cualificación.</b>
+        </h2>
+        <hr>
+        <h2>Si bien el foro salteño cuenta con una oferta amplia y plural, CARO FIGUEROA ABOGADOS se singulariza por:
+        a: Combinar una visión de las relaciones sociales y jurídicas que es global y también local;
+        b: Apostar por la calidad, la responsabilidad y la búsqueda de métodos no convencionales de solución de conflictos y litigios, tales como la conciliación y el arbitraje privados;
+        c: Especializarse en la atención de aquellos asuntos jurídicos que son propios de la actividad agropecuaria, agroindustrial y minera.</h2>
+        <hr>
+        <h2>Pensamos que la cosmopolitización de los derechos fundamentales -inaugurada por la reforma constitucional de 1994-, así como el nuevo Código Civil y Comercial de la Argentina, son grandes oportunidades para la renovación
+        de las relaciones interpersonales, económicas y cívicas, también para las personas y los actores sociales que se desenvuelven en Salta y en el noroeste argentino.</h2>
+        <h2>Ambas novedades institucionales están impulsando la reforma del servicio provincial de justicia y ha de ser acompañada por cambios sustantivos en los ámbitos atinentes a la abogacía.</h2>
+        <h2>CARO FIGUEROA ABOGADOS asume y se sitúa en esta trayectoria reformista y pretende volcar sus beneficios en favor de sus clientes.</h2>
+        <hr>
     </main>
-
     <aside>
         <!-- Sidebar / Ads -->
     </aside>
