--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Favicon-->
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 
     <!--Styles-->
     <link rel="stylesheet" href="css/grid.css">
@@ -38,7 +38,7 @@
 </section>
 <div class="container">
     <header class="header">
-        <img class="logo" src="img/logo_home.jpg">
+        <img class="logo" src="img/logo.svg">
         <div class="links">
         <ul>
         <li><a href="index.html">Inicio</a></li>
@@ -129,17 +129,16 @@
             Profesionales de diversa trayectoria en el campo de las ciencias sociales nos hemos reunido en CARO FIGUEROA ABOGADOS
             para brindar a quienes atraviesan situaciones de conflicto y reclaman el reconocimiento de sus derechos, un servicio de alta cualificación.</b>
         </h2>
-        <hr>
+        <div class="separator-line margin-seven"></div>
         <h2>Si bien el foro salteño cuenta con una oferta amplia y plural, CARO FIGUEROA ABOGADOS se singulariza por:
         a: Combinar una visión de las relaciones sociales y jurídicas que es global y también local;
         b: Apostar por la calidad, la responsabilidad y la búsqueda de métodos no convencionales de solución de conflictos y litigios, tales como la conciliación y el arbitraje privados;
         c: Especializarse en la atención de aquellos asuntos jurídicos que son propios de la actividad agropecuaria, agroindustrial y minera.</h2>
-        <hr>
+        <div class="separator-line margin-seven"></div>
         <h2>Pensamos que la cosmopolitización de los derechos fundamentales -inaugurada por la reforma constitucional de 1994-, así como el nuevo Código Civil y Comercial de la Argentina, son grandes oportunidades para la renovación
         de las relaciones interpersonales, económicas y cívicas, también para las personas y los actores sociales que se desenvuelven en Salta y en el noroeste argentino.</h2>
         <h2>Ambas novedades institucionales están impulsando la reforma del servicio provincial de justicia y ha de ser acompañada por cambios sustantivos en los ámbitos atinentes a la abogacía.</h2>
         <h2>CARO FIGUEROA ABOGADOS asume y se sitúa en esta trayectoria reformista y pretende volcar sus beneficios en favor de sus clientes.</h2>
-        <hr>
     </main>
     <aside>
         <!-- Sidebar / Ads -->
