--- a/actividad.html
+++ b/actividad.html
@@ -54,11 +54,29 @@
     <nav>
     </nav>
     <main>
-    <h1>CLIENTES</h1>
-    <p>Próximamente en este espacio Usted va a poder consultar sus expedientes online así como a otros
-    servicios pensados para facilitar la gestión de los casos de nuestros clientes.
-    Agradecemos que por cualquier duda o inquietud nos deje tus datos en nuestro formulario de contacto.
-    Muchas gracias.</p>
+        <h1>ACTIVIDADES</h1>
+        <h2>CONSUMIDORES Y USUARIOS</h2>
+        <p>Los ciudadanos cada vez interactuamos más con empresas de distinto tipo comprando productos o servicios.
+         El funcionamiento de estas grandes corporaciones así como muchas veces el desconocimiento de los derechos por parte
+         de los consumidores provoca que se produzcan cada vez más abusos no sólo en la aplicación de las normas sino también
+         en la configuración y redacción de las mismas.
+         Desde el ESTUDIO CARO FIGUEROA buscamos, a través de nuestros servicios democratizar el ejercicio de derechos por parte
+         de los consumidores con el objetivo de que la desinformación, la complejidad o los costes no representen un obstáculo
+         para las personas en el ejercicio de sus derechos.</p>
+        <h2>COMPLIANCE</h2>
+        <p>La responsabilidad penal de las personas jurídicas es un ámbito en desarrollo en Argentina y en el mundo. Esto hace que los directivos,
+         órganos de gobierno y administradores de sociedades deban extremar las cautelas en el desarrollo de su negocio para no incurrir en ilícitos penales.
+         Esto implica que los consejeros y directivos podrían ser responsables penales de acciones ilegales cometidas por personal de su organización.
+         Desde ESTUDIO CARO FIGUEROA ofrecemos un servicio a través del cual asesoramos a nuestros clientes desde una óptica de negocio identificando
+         los riesgos y adoptando medidas de prevención, vigilancia y control con el objeto de prevenir delitos o para reducir de forma significativa
+         el riesgo de su comisión. Nuestro valor agregado, además de la experiencia, consiste en desarrollar un servicio de asesoramiento jurídico
+         desde una perspectiva de negocio. Debemos entender SU negocio para ayudarle a prevenir SUS riesgos.</p>
+         <h2>COBRANZAS</h2>
+        <p>ESTUDIO CARO FIGUEROA a través de su servicio de cobranzas busca implementar medidas de saneamiento en la economía salteña.
+        Mejorando el sistema de cobros de entidades financieras y de las empresas se liberan recursos productivos estancados en el sistema
+        de financiamiento informal. Nuestros más de 15 años de experiencia en el sector nos permiten utilizar de manera efectiva herramientas
+        de cobro modernas y efectivas incluso desde una fase previa del vencimiento de un recibo o factura hasta la fase judicial.</p>
+        <h2>LABORAL</h2>
     </main>
 
     <aside>
