--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <body>
  <section class="superior">
     <span>SÍGUENOS!</span>
-    <a href="https://www.facebook.com/coworkingensalta/?ref=br_rs" target="blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-    <a href="https://twitter.com/coworking_sla" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-    <a href="https://www.linkedin.com/in/coworking-sla-5758b6150" target="blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    <a href="" target="blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+    <a href="" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    <a href="https://www.linkedin.com/in/estudio-caro-figueroa-b76575140/ " target="blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
 </section>
 <div class="container">
     <header class="header">
@@ -42,10 +42,11 @@
         <div class="links">
         <ul>
         <li><a href="index.html">Inicio</a></li>
+        <li><a href="novedades.html">Novedades</a></li>
         <li><a href="quienes.html">Quiénes somos</a></li>
-        <li><a href="coworking.html">Código ético</a></li>
-        <li><a href="nuestros-servicios.html">Areas de actuación</a></li>
-        <li><a href="donde.html">Artículos</a></li>
+        <li><a href="actividad.html">Areas de actividad</a></li>
+        <li><a href="donde.html">Dónde estamos</a></li>
+        <li><a href="clientes.html">Area clientes</a></li>
         <li><a href="contacto.html">Contacto</a>
         </ul>
     </div>
@@ -131,14 +132,14 @@
         </h2>
         <div class="separator-line margin-seven"></div>
         <h2>Si bien el foro salteño cuenta con una oferta amplia y plural, CARO FIGUEROA ABOGADOS se singulariza por:
-        a: Combinar una visión de las relaciones sociales y jurídicas que es global y también local;
-        b: Apostar por la calidad, la responsabilidad y la búsqueda de métodos no convencionales de solución de conflictos y litigios, tales como la conciliación y el arbitraje privados;
-        c: Especializarse en la atención de aquellos asuntos jurídicos que son propios de la actividad agropecuaria, agroindustrial y minera.</h2>
+        <h2><b>A:</b>Combinar una visión de las relaciones sociales y jurídicas que es global y también local;</h2>
+        <h2><b>B:</b> Apostar por la calidad, la responsabilidad y la búsqueda de métodos no convencionales de solución de conflictos y litigios, tales como la conciliación y el arbitraje privados;
+        <h2><b>C:</b> Especializarse en la atención de aquellos asuntos jurídicos que son propios de la actividad agropecuaria, agroindustrial y minera.</h2>
         <div class="separator-line margin-seven"></div>
         <h2>Pensamos que la cosmopolitización de los derechos fundamentales -inaugurada por la reforma constitucional de 1994-, así como el nuevo Código Civil y Comercial de la Argentina, son grandes oportunidades para la renovación
         de las relaciones interpersonales, económicas y cívicas, también para las personas y los actores sociales que se desenvuelven en Salta y en el noroeste argentino.</h2>
         <h2>Ambas novedades institucionales están impulsando la reforma del servicio provincial de justicia y ha de ser acompañada por cambios sustantivos en los ámbitos atinentes a la abogacía.</h2>
-        <h2>CARO FIGUEROA ABOGADOS asume y se sitúa en esta trayectoria reformista y pretende volcar sus beneficios en favor de sus clientes.</h2>
+        <h2><b>CARO FIGUEROA ABOGADOS asume y se sitúa en esta trayectoria reformista y pretende volcar sus beneficios en favor de sus clientes.</b></h2>
     </main>
     <aside>
         <!-- Sidebar / Ads -->
