--- a/novedades.html
+++ b/novedades.html
@@ -54,11 +54,8 @@
     <nav>
     </nav>
     <main>
-    <h1>CLIENTES</h1>
-    <p>Próximamente en este espacio Usted va a poder consultar sus expedientes online así como a otros
-    servicios pensados para facilitar la gestión de los casos de nuestros clientes.
-    Agradecemos que por cualquier duda o inquietud nos deje tus datos en nuestro formulario de contacto.
-    Muchas gracias.</p>
+        <h1>Novedades</h1>
+            <p>Lugar para insertar documentos</p>
     </main>
 
     <aside>
