--- a/quienes.html
+++ b/quienes.html
@@ -6,55 +6,27 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+
     <!-- COMMON TAGS -->
     <meta charset="utf-8">
-    <title>Coworking Salta</title>
+    <title>Estudio Caro Figueroa Abogados</title>
     <!-- Search Engine -->
-    <meta name="description" content="Ahora tenés en Salta un nuevo lugar de coworking, donde podrás cultivar tu creatividad, compartiendo ideas y conocimientos, o simplemente trabajando en tus proyectos en un entorno cómodo, agradable, espacioso y con horarios flexibles.">
-    <meta name="image" content="www.coworkingsalta.com/img/logo.png">
+
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Coworking Salta">
-    <meta itemprop="description" content="Ahora tenés en Salta un nuevo lugar de coworking, donde podrás cultivar tu creatividad, compartiendo ideas y conocimientos, o simplemente trabajando en tus proyectos en un entorno cómodo, agradable, espacioso y con horarios flexibles.">
-    <meta itemprop="image" content="www.coworkingsalta.com/img/logo.png">
+
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Coworking Salta">
-    <meta name="twitter:description" content="Ahora tenés en Salta un nuevo lugar de coworking, donde podrás cultivar tu creatividad, compartiendo ideas y conocimientos, o simplemente trabajando en tus proyectos en un entorno cómodo, agradable, espacioso y con horarios flexibles.">
-    <meta name="twitter:site" content="@coworking_sla">
-    <meta name="twitter:creator" content="@coworking_sla">
-    <meta name="twitter:image:src" content="www.coworkingsalta.com/img/logo.png">
+
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="Coworking Salta">
-    <meta name="og:description" content="Ahora tenés en Salta un nuevo lugar de coworking, donde podrás cultivar tu creatividad, compartiendo ideas y conocimientos, o simplemente trabajando en tus proyectos en un entorno cómodo, agradable, espacioso y con horarios flexibles.">
-    <meta name="og:image" content="www.coworkingsalta.com/img/logo_menu.png">
-    <meta name="og:url" content="www.coworkingsalta.com">
-    <meta name="og:site_name" content="Coworking Salta">
-    <meta name="fb:admins" content="108625579752882">
-    <meta name="og:type" content="website">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109762199-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-109762199-1');
-    </script>
-
 
 
     <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="theme-color" content="#ffffff">
 
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
     <!--Styles-->
     <link rel="stylesheet" href="css/grid.css">
-    <title>Coworking Salta</title>
 </head>
 <body>
     <section class="superior">
@@ -66,27 +38,27 @@
 <div class="container">
     <header class="header">
         <img class="logo" src="img/logo.svg">
-       <div class="links">
-           <ul>
-               <li><a href="index.html">HOME</a></li>
-               <li><a href="quienes.html">QUIÉNES SOMOS</a></li>
-               <li><a href="coworking.html">QUÉ ES EL COWORKING</a></li>
-               <li><a href="nuestros-servicios.html">NUESTROS SERVICIOS</a></li>
-               <li><a href="donde.html">DÓNDE ESTAMOS</a></li>
-               <li><a href="clientes.html">ACCESO CLIENTES</a></li>
-               <li><a href="contacto.html">CONTACTO</a>
-           </ul>
-    </div>
+        <div class="links">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="novedades.html">Novedades</a></li>
+                <li><a href="quienes.html">Quiénes somos</a></li>
+                <li><a href="actividad.html">Areas de actividad</a></li>
+                <li><a href="donde.html">Dónde estamos</a></li>
+                <li><a href="clientes.html">Area clientes</a></li>
+                <li><a href="contacto.html">Contacto</a>
+            </ul>
+        </div>
     </header>
     <nav>
     </nav>
     <main>
  <h1>QUIENES SOMOS</h1>
-   <p><img src="img/logo_cf.png" alt=""> desarrolla su línea de Coworking a través de una Sociedad por Acciones Simplificada denominada “CENTRO DE NEGOCIOS SLA – COWORKING SOCIEDAD POR ACCIONES SIMPLIFICADA” y está integrado por los siguientes socios:</p>
-  <img src="img/armando_caro.jpg" alt="" style="border-radius: 100%; margin: 0 auto; display: flex; justify-content: center; width: 150px; height: 150px;">
-   <p class="quienes">
+ <p><b>ESTUDIO CARO FIGUEROA </b>forma parte de<img src="img/logo_cf.png" alt=""></p>
+ <img src="img/armando_caro.jpg" alt="" style="border-radius: 100%; margin: 0 auto; display: flex; justify-content: center; width: 150px; height: 150px;">
+ <p class="quienes">
 
-       <b>José Armando Caro Figueroa </b>obtuvo el título de Abogado en la Universidad Nacional de Tucumán en abril de 1964. Casi inmediatamente después, se desempeñó en Salta como Secretario de un Juzgado Civil y Comercial; luego fue Secretario de la Corte de Justicia, Fiscal Civil Comercial y del Trabajo, y Fiscal de Estado (1973). </p>
+<b>José Armando Caro Figueroa </b>obtuvo el título de Abogado en la Universidad Nacional de Tucumán en abril de 1964. Casi inmediatamente después, se desempeñó en Salta como Secretario de un Juzgado Civil y Comercial; luego fue Secretario de la Corte de Justicia, Fiscal Civil Comercial y del Trabajo, y Fiscal de Estado (1973). </p>
  
  <p class="quienes">En 1976 se exilió en España donde amplió sus estudios de derecho en la Universidad Complutense de Madrid, asesoró a la Unión General de Trabajadores (UGT), y ejerció como abogado laboralista.</p>
  
@@ -137,7 +109,16 @@ Es autor también de varios libros centrados en Salta y su región que abordan a
  </p>
 <a href="mailto:rcr@coworkingsalta.com">rcr@coworkingsalta.com</a>
 
+<p> <a href="http://www.coworkingsalta.com">• CF COWORKING SLA </a>
+    Nuestros servicios de coworking están dirigidos a emprendedores, profesionales autónomos, freelancers, que buscan un lugar y un ambiente para el mejor desarrollo de sus actividades y que precisan mantener reuniones con socios, clientes o proveedores.
+    Ponemos a disposición de nuestros clientes una infraestructura y servicios adecuados, a un precio razonable. Somos, en este sentido, una alternativa rentable y práctica al tradicional sistema de alquiler de oficinas. Una opción que permite alquilar, de forma temporal, desde un puesto de trabajo hasta una sala de reuniones, con sus correspondientes servicios.
+    Contribuimos a que nuestros clientes innoven en la forma de organizar su actividad productiva, compartiendo espacios con otros profesionales o emprendedores.
+    Nos inspiramos en una filosofía de trabajo que fomenta la colaboración, la innovación, el talento y la comunicación.
 
+ <p>• <b>CF CONSULTORA DE RELACIONES LABORALES</b>
+    Ofrecemos a las organizaciones vinculadas con el mundo del trabajo (empresas, sindicatos, cámaras empresarias y administración pública) un amplio y especializado servicio de estudios y análisis de todos los aspectos relacionados con la representación, la negociación colectiva, la acción sindical en la empresa y los conflictos colectivos seguidos o no de huelga.
+    Nos especializamos en promover canales de diálogo entre los actores sociales, en formalizar medios alternativos de solución de los conflictos, y en procurar acuerdos que consoliden la paz social. Para ello, ayudamos a las organizaciones a definir estrategias de negociación y comunicación, a montar observatorios y herramientas de seguimiento, a formar a los encargados de las relaciones colectivas de trabajo.
+</p>
     </main>
 
     <aside>
