--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Favicon-->
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 
     <!--Styles-->
     <link rel="stylesheet" href="css/grid.css">
@@ -34,11 +34,11 @@
     <span>SÍGUENOS!</span>
     <a href="" target="blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
     <a href="" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-    <a href="https://www.linkedin.com/in/estudio-caro-figueroa-b76575140/ " target="blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    <a href="https://www.linkedin.com/in/estudio-caro-figueroa-b76575140/" target="blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
 </section>
 <div class="container">
     <header class="header">
-        <img class="logo" src="img/logo.svg">
+        <img class="logo" src="img/logo_blanco-01-01.svg">
         <div class="links">
         <ul>
         <li><a href="index.html">Inicio</a></li>
@@ -121,10 +121,10 @@
         <li><a href="#0">7</a></li>
         <li><a href="#0">8</a></li>
     </ol>
-</section> <!-- .full-width-slider --></div>
+    </section> <!-- .full-width-slider --></div>
     <nav></nav>
     <main>
-        <h2><b>Es un nuevo emprendimiento profesional, hecho por salteños, fruto de la confluencia entre la visión tradicional y los más avanzados aportes que,
+        <h2 class="col-2"><b>Es un nuevo emprendimiento profesional, hecho por salteños, fruto de la confluencia entre la visión tradicional y los más avanzados aportes que,
             como sucede con las nuevas tecnologías de la información y la comunicación, están renovando el ejercicio de la abogacía y el tratamiento
             de los conflictos en las relaciones civiles, comerciales, laborales, ambientales y de familia.
             Profesionales de diversa trayectoria en el campo de las ciencias sociales nos hemos reunido en CARO FIGUEROA ABOGADOS
