--- a/actividad.html
+++ b/actividad.html
@@ -24,7 +24,7 @@
     <!--Favicon-->
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 
     <!--Styles-->
     <link rel="stylesheet" href="css/grid.css">
@@ -38,7 +38,7 @@
 </section>
 <div class="container">
     <header class="header">
-        <img class="logo" src="img/logo.svg">
+        <img class="logo" src="img/logo_blanco.svg">
         <div class="links">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -54,8 +54,8 @@
     <nav>
     </nav>
     <main>
-        <h1>ACTIVIDADES</h1>
-        <h2>CONSUMIDORES Y USUARIOS</h2>
+        <h1>Actividades</h1>
+        <h3>Consumidores y usuarios</h3>
         <p>Los ciudadanos cada vez interactuamos más con empresas de distinto tipo comprando productos o servicios.
          El funcionamiento de estas grandes corporaciones así como muchas veces el desconocimiento de los derechos por parte
          de los consumidores provoca que se produzcan cada vez más abusos no sólo en la aplicación de las normas sino también
@@ -63,7 +63,7 @@
          Desde el ESTUDIO CARO FIGUEROA buscamos, a través de nuestros servicios democratizar el ejercicio de derechos por parte
          de los consumidores con el objetivo de que la desinformación, la complejidad o los costes no representen un obstáculo
          para las personas en el ejercicio de sus derechos.</p>
-        <h2>COMPLIANCE</h2>
+        <h3>Compliance</h3>
         <p>La responsabilidad penal de las personas jurídicas es un ámbito en desarrollo en Argentina y en el mundo. Esto hace que los directivos,
          órganos de gobierno y administradores de sociedades deban extremar las cautelas en el desarrollo de su negocio para no incurrir en ilícitos penales.
          Esto implica que los consejeros y directivos podrían ser responsables penales de acciones ilegales cometidas por personal de su organización.
@@ -71,12 +71,14 @@
          los riesgos y adoptando medidas de prevención, vigilancia y control con el objeto de prevenir delitos o para reducir de forma significativa
          el riesgo de su comisión. Nuestro valor agregado, además de la experiencia, consiste en desarrollar un servicio de asesoramiento jurídico
          desde una perspectiva de negocio. Debemos entender SU negocio para ayudarle a prevenir SUS riesgos.</p>
-         <h2>COBRANZAS</h2>
+         <h3>Cobranzas</h3>
         <p>ESTUDIO CARO FIGUEROA a través de su servicio de cobranzas busca implementar medidas de saneamiento en la economía salteña.
         Mejorando el sistema de cobros de entidades financieras y de las empresas se liberan recursos productivos estancados en el sistema
         de financiamiento informal. Nuestros más de 15 años de experiencia en el sector nos permiten utilizar de manera efectiva herramientas
         de cobro modernas y efectivas incluso desde una fase previa del vencimiento de un recibo o factura hasta la fase judicial.</p>
-        <h2>LABORAL</h2>
+        <h3>Laboral</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis culpa deserunt ducimus facilis impedit omnis velit!
+         Atque blanditiis consequatur eaque eum ex laborum magni pariatur placeat possimus, reprehenderit sapiente unde.</p>
     </main>
 
     <aside>
