--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
     <!--Favicon-->
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 
 
     <!--Styles-->
@@ -42,7 +42,7 @@
 </section>
 <div class="container">
     <header class="header">
-        <img class="logo" src="img/logo.svg">
+        <img class="logo" src="img/logo_blanco.svg">
         <div class="links">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -58,7 +58,7 @@
     <nav>
     </nav>
     <main>
- <h1>CONTÁCTANOS</h1>
+ <h1>Contáctanos</h1>
         <div id="form-main">
                 <div id="form-div">
                     <form class="montform" id="reused_form" >
