--- a/donde.html
+++ b/donde.html
@@ -24,7 +24,7 @@
     <!--Favicon-->
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 
     <!--Styles-->
     <link rel="stylesheet" href="css/grid.css">
@@ -38,7 +38,7 @@
 </section>
 <div class="container">
     <header class="header">
-        <img class="logo" src="img/logo.svg">
+        <img class="logo" src="img/logo_blanco.svg">
         <div class="links">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -54,7 +54,7 @@
     <nav>
     </nav>
     <main>
- <h1>DONDE ESTAMOS</h1>
+ <h1>Dónde estamos</h1>
    <div class='embed-container'>
        <iframe src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3622.234051183955!2d-65.42064508499858!3d-24.787437884088416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x941bc3b0ef0a3c9f%3A0xa115d768c1899669!2sPje.+Arteaga+1157%2C+Salta!5e0!3m2!1ses-419!2sar!4v1508275445090' width='600' height='450' frameborder='0' style='border:0'></iframe></div>
     </main>
