--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
 </section>
 <div class="container">
     <header class="header">
-        <img class="logo" src="img/logo_blanco-01-01.svg">
+        <img class="logo" src="img/logo_blanco.svg">
         <div class="links">
         <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="novedades.html">Novedades</a></li>
-        <li><a href="quienes.html">Quiénes somos</a></li>
-        <li><a href="actividad.html">Areas de actividad</a></li>
-        <li><a href="donde.html">Dónde estamos</a></li>
-        <li><a href="clientes.html">Area clientes</a></li>
-        <li><a href="contacto.html">Contacto</a>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="novedades.html">Novedades</a></li>
+            <li><a href="quienes.html">Quiénes somos</a></li>
+            <li><a href="actividad.html">Areas de actividad</a></li>
+            <li><a href="donde.html">Dónde estamos</a></li>
+            <li><a href="clientes.html">Area clientes</a></li>
+            <li><a href="contacto.html">Contacto</a>
         </ul>
     </div>
     </header>
@@ -56,8 +56,8 @@
     <ul class="slides">
         <li class="selected">
             <div>
-                <h2>BIENVENIDOS A LA EXPERIENCIA COWORKING</h2>
-                <p>Bienvenidos a Coworking Salta.</p>
+                <h2>Bienvenidos <br>a Estudio <br>Caro Figueroa</h2>
+                <p>Abogados</p>
             </div>
         </li>
         <li>
@@ -66,7 +66,6 @@
                 <p></p>
             </div>
         </li>
-
         <li>
             <div>
                 <h2></h2>
@@ -124,7 +123,7 @@
     </section> <!-- .full-width-slider --></div>
     <nav></nav>
     <main>
-        <h2 class="col-2"><b>Es un nuevo emprendimiento profesional, hecho por salteños, fruto de la confluencia entre la visión tradicional y los más avanzados aportes que,
+        <h2><b>Es un nuevo emprendimiento profesional, hecho por salteños, fruto de la confluencia entre la visión tradicional y los más avanzados aportes que,
             como sucede con las nuevas tecnologías de la información y la comunicación, están renovando el ejercicio de la abogacía y el tratamiento
             de los conflictos en las relaciones civiles, comerciales, laborales, ambientales y de familia.
             Profesionales de diversa trayectoria en el campo de las ciencias sociales nos hemos reunido en CARO FIGUEROA ABOGADOS
@@ -150,7 +149,7 @@
     <div class="col1"><b>Encontranos aquí</b><br>
         Pje. Arteaga 1157, Salta. Argentina. <br>
         Tel: 0387 155 20 30 50 <br>
-        <a href="mailto:info@coworkingsalta.com" target="_top">info@coworkingsalta.com</a><br>
+        <a href="mailto:info@coworkingsalta.com" target="_top"><b>info@estudiocarofigueroa.com</b></a><br>
         <br></div>
     <div class="col2"><b>También aquí</b><br>
         <a href="https://www.facebook.com/coworkingensalta/?ref=br_rs" target="blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
