--- a/legales.html
+++ b/legales.html
@@ -24,7 +24,7 @@
     <!--Favicon-->
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 
     <!--Styles-->
     <link rel="stylesheet" href="css/grid.css">
@@ -38,7 +38,7 @@
 </section>
 <div class="container">
     <header class="header">
-        <img class="logo" src="img/logo.svg">
+        <img class="logo" src="img/logo_blanco.svg">
         <div class="links">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -54,7 +54,7 @@
     <nav>
     </nav>
     <main>
- <h1>AVISO LEGAL</h1>
+ <h1>Aviso Legal</h1>
 <p class="quienes"><b>1.DATOS GENERALES. </b><br>
 Ponemos a su disposición los siguientes datos:
 CENTRO DE NEGOCIOS SLA – COWORKING SOCIEDAD POR ACCIONES SIMPLIFICADA está
