--- a/clientes.html
+++ b/clientes.html
@@ -24,7 +24,7 @@
     <!--Favicon-->
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 
     <!--Styles-->
     <link rel="stylesheet" href="css/grid.css">
@@ -38,7 +38,7 @@
 </section>
 <div class="container">
     <header class="header">
-        <img class="logo" src="img/logo.svg">
+        <img class="logo" src="img/logo_blanco.svg">
         <div class="links">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -54,7 +54,7 @@
     <nav>
     </nav>
     <main>
-    <h1>CLIENTES</h1>
+    <h1>Clientes</h1>
     <p>Próximamente en este espacio Usted va a poder consultar sus expedientes online así como a otros
     servicios pensados para facilitar la gestión de los casos de nuestros clientes.
     Agradecemos que por cualquier duda o inquietud nos deje tus datos en nuestro formulario de contacto.
