--- a/quienes.html
+++ b/quienes.html
@@ -24,7 +24,7 @@
     <!--Favicon-->
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <!--Styles-->
     <link rel="stylesheet" href="css/grid.css">
 </head>
@@ -37,7 +37,7 @@
 </section>
 <div class="container">
     <header class="header">
-        <img class="logo" src="img/logo.svg">
+        <img class="logo" src="img/logo_blanco.svg">
         <div class="links">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -53,7 +53,7 @@
     <nav>
     </nav>
     <main>
- <h1>QUIENES SOMOS</h1>
+ <h1>Quienes somos</h1>
  <p><b>ESTUDIO CARO FIGUEROA </b>forma parte de<img src="img/logo_cf.png" alt=""></p>
  <img src="img/armando_caro.jpg" alt="" style="border-radius: 100%; margin: 0 auto; display: flex; justify-content: center; width: 150px; height: 150px;">
  <p class="quienes">
@@ -86,7 +86,8 @@ Es autor también de varios libros centrados en Salta y su región que abordan a
 <a href="mailto:acf@estudiocarofigueroa.com">acf@estudiocarofigueroa.com</a>
    </p>
 
-<hr>
+ <div class="separator-line margin-seven"></div>
+
  <img src="img/rodrigo_caro.jpg" alt="" style="border-radius: 100%; margin: 0 auto; display: flex; justify-content: center; width: 150px; height: 150px;">
  <p class="quienes"><b>Rodrigo Caro Romero </b>obtuvo el título de Licenciado en Derecho por la Universidad Autónoma de Madrid en 1999 (título en proceso de homologación en la Universidad Nacional de Rosario) y el de Ciencias Políticas y de la Administración en 2000.</p>
  
@@ -108,6 +109,8 @@ Es autor también de varios libros centrados en Salta y su región que abordan a
  <p class="quienes">Desde 2017 es socio director del Estudio Caro Figueroa Abogados, director del centro de coworking SLA y socio de la Consultora CF.
  </p>
 <a href="mailto:rcr@coworkingsalta.com">rcr@coworkingsalta.com</a>
+
+<div class="separator-line margin-seven"></div>
 
 <p> <a href="http://www.coworkingsalta.com">• CF COWORKING SLA </a>
     Nuestros servicios de coworking están dirigidos a emprendedores, profesionales autónomos, freelancers, que buscan un lugar y un ambiente para el mejor desarrollo de sus actividades y que precisan mantener reuniones con socios, clientes o proveedores.
