--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Favicon-->
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
 
     <!--Styles-->
     <link rel="stylesheet" href="css/grid.css">
